--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,24 +2,17 @@
 owner: mauribesson # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 sites:
- # - name: Google
- #   url: https://www.google.com
- # - name: Wikipedia
- #   url: https://en.wikipedia.org
- # - name: Hacker News
- #   url: https://news.ycombinator.com
- # - name: Test Broken Site
- #   url: https://thissitedoesnotexist.koj.co
-  - name: DEV - API - Transact Api
-    url: http://52.143.251.96/swagger
-  - name: DEV - API - Ticket Api
-    url: http://13.86.126.10/swagger    
-  - name: DEV - API - Eflow Auth
-    url: http://52.143.249.28/swagger
-  - name: DEV - API - Appointment Api
-    url: http://13.89.107.12/swagger
-  - name: DEV - API - Annucement[VER estaba caido al probar] 
-    url: http://40.89.248.129/swagger
+ #### DEV
+ # - name: DEV - API - Transact Api
+ #   url: http://52.143.251.96/swagger
+ # - name: DEV - API - Ticket Api
+ #   url: http://13.86.126.10/swagger    
+ # - name: DEV - API - Eflow Auth
+ #   url: http://52.143.249.28/swagger
+ # - name: DEV - API - Appointment Api
+ #   url: http://13.89.107.12/swagger
+ # - name: DEV - API - Annucement[VER estaba caido al probar] 
+ #   url: http://40.89.248.129/swagger
     
  #  VQs PROD 
   - name: VQ PROD AR
